# fir-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
extra/: CMakeLists.txt
extra/include/: firfreqz_naive.hpp
extra/source/: firfreqz_naive.cpp
include/: fir.hpp
javascript/: README.md  build_debug.sh  build_release.sh  emscripten_helpers.mjs  index.html  run.sh  sanitizer.cpp  settings.sh  speed.sh  speed_fir.mjs  speed_fir.sh  speed_firls.js  test_fir.mjs  test_fir.sh  test_firls.js  web.sh
kissfft/: CMakeLists.txt
source/: firerror.cpp  firfreqz.cpp  firls.cpp
speed/: CMakeLists.txt  speed_firls.cpp  speed_freqz.cpp  stopwatch_elapsed.h
test/: CMakeLists.txt  test_firls.cpp
